admin panel user profile alignment fixed

--- a/src/components/adminPannel/style/farmers.css
+++ b/src/components/adminPannel/style/farmers.css
@@ -213,4 +213,37 @@ section table .butt2 {
         border: 1.6px solid white;
         overflow: hidden;
     }
+
+    .userpopup .inside .emails {
+        height: 20vh;
+    }
+
+    .userpopup .inside .emails h3 {
+        font-weight: 700;
+        font-size: 1.2rem;
+    }
+
+    .userpopup .inside .emails p {
+        font-weight: 600;
+        color: rgb(103, 103, 103);
+        font-size: .8rem;
+    }
+
+    .userpopup .inside .emails span {
+        background-color: rgba(0, 128, 0, 0.227);
+        padding: 2px 10px;
+        border-radius: 20px;
+        color: rgb(0, 100, 0);
+        font-weight: 600;
+        border: 1.5px solid green;
+        font-size: .7rem;
+    }
+
+    .userpopup .inside .contents .information h6 {
+        font-size: .8rem;
+        font-weight: 700;
+    }
+
+
+
 }
