--- a/src/components/devestries/divestry.css
+++ b/src/components/devestries/divestry.css
@@ -331,5 +331,12 @@
         vertical-align: middle;
     }
 
+    .divestrysection .popup .inner {
+    background-color: white;
+    padding: 20px;
+    width: 100%;
+    border-radius: 20px;
+}
+
 
 }
